# anmap-wrapper

./: README.md  build.gradle  gradle.properties  settings.gradle  white_check_mark: |
.github/workflows/: Android windows.yml  android.yml  clojure.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  do_nothing.cpp  make_nmap.sh  nmap-wrapper-lib.cpp  nmap-wrapper.cpp  route-linux.c.patch
app/src/main/cpp/patches/: libdnet-acconfig.h.patch  libdnet-configure.ac.patch  libpcre2-8.sym.patch  libpcre2-posix.sym.patch
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_anmap.xml  activity_main.xml  activity_parser.xml  content_anmap.xml  hostname_list_entry.xml  parsed_host_view.xml  parsed_service_view.xml  settings_activity.xml
app/src/main/res/menu/: main_menu.xml  menu_anmap.xml
app/src/nmap-src/: CHANGELOG  Makefile  config.status  make-android.sh  makefile.dep  nmap-7.01-1.spec  nmap-wrapper-debug.c  nmap-wrapper.cc  nmap.cc  nmap.h  nmap_config.h  output.cc  output.h  zenmap-7.01-1.spec
app/src/nmap-src/docs/: nmap-update.1  nmap.1  nmap.usage.txt  zenmap.1
app/src/nmap-src/libdnet-stripped/: Makefile  config.status  libdnet-stripped.vcxproj  libtool
app/src/nmap-src/liblinear/: liblinear.vcxproj
app/src/nmap-src/liblua/: liblua.vcxproj
app/src/nmap-src/libnetutil/: Makefile  libnetutil.vcxproj  makefile.dep
app/src/nmap-src/libpcap/: Makefile  config.h  config.status  version.c  version.h
app/src/nmap-src/libpcre/: Makefile  config.h  config.status  libpcre.vcxproj  pcre-config
app/src/nmap-src/mswin32/: nmap.rc  nmap.sln  nmap.vcxproj
app/src/nmap-src/nbase/: Makefile  config.status  nbase.vcxproj  nbase_config.h
app/src/nmap-src/ncat/: Makefile  config.h  config.status  makefile.dep  ncat  ncat.h  ncat.vcxproj
app/src/nmap-src/nmap-update/: nmap-update.vcxproj
app/src/nmap-src/nping/: Makefile  config.status  makefile.dep  nping  nping.h  nping.vcxproj  nping_config.h
app/src/nmap-src/nsock/: nsock.vcxproj
gradle/wrapper/: gradle-wrapper.properties
(+77 files in other folders)
